update some styling and dragging limit

--- a/curvedVolume.html
+++ b/curvedVolume.html
@@ -50,7 +50,8 @@
 
             <textarea id = "annoText" name="annote" cols="50" rows="10" placeholder="Your annotations.." style = "margin-top : 20px"></textarea>
         
-            <button  onclick ="updateAnno()">Submit</button>
+            <br></br>
+            <button  onclick ="updateAnno()">Update Annotations</button>
         </div>
 
 
