--- a/fourSide.html
+++ b/fourSide.html
@@ -48,15 +48,15 @@
             
 
             <textarea id = "annoText" name="annote" cols="50" rows="10" placeholder="Your annotations.." style = "margin-top : 20px"></textarea>
-        
-            <button  onclick ="updateAnno()">Submit</button>
+            <br></br>
+            <button  onclick ="updateAnno()">Update Annotations</button>
         </div>
 
+        <br></br>
+        <br></br>
         <div id = "changeDimision">
             <label for="distanceRight">Choose the width of the model:</label>
             <select id="distanceRight" onchange ="updateDimision()">
-                <option value="80px">80px</option>
-                <option value="100px">100px</option>
                 <option value="120px">120px</option>
                 <option value="140px">140px</option>
                 <option value="160px">160px</option>
