--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <script src="index.js"></script>
     <!--<button onclick="splitSTL()">splitSTL</button>-->
 
-
-    <div id="desText" style="width: 40%; margin-left: 10px">
+    <div id="desText" style="width: 40%; margin-left: 10px; float:left">
+    
       <h2>How to use PrinterForm</h2>
       <h5>
         With nothing more than a common copy printer and PrinterForm, you can
