--- a/fourSide.html
+++ b/fourSide.html
@@ -69,8 +69,9 @@
         </div>
 
         <div id = "instructions">
-            <p>It may be nesscery to rotate the STL file so that the bottom of the STL touches the borders of the page before printing. Once you have printed the PDF, roll edges into cone until lines align and matching dots overlap. Staple.</p>
+            <p>It may be necessary to rotate the image to the desired position on the page before printing. </p>
         </div>
+
     </div>
     
 
