--- a/fourSide.html
+++ b/fourSide.html
@@ -69,7 +69,7 @@
         </div>
 
         <div id = "instructions">
-            <p>It may be necessary to rotate the image to the desired position on the page before printing. </p>
+            <p>It may be necessary to reposition the image and adjust the height of the model before printing.  Once you have printed the PDF, fold the red lines in. Then fold the blue lines. Finally, tuck the last flap into the end.</p>
         </div>
 
     </div>
