added start page

--- a/Web Page1.0/print-editor/editor.html
+++ b/Web Page1.0/print-editor/editor.html
@@ -21,21 +21,21 @@
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
 
     <!--css-->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="selectForm.css" />
     <link rel="stylesheet" href="editor.css" />
 
 
   </head>
   <div id="intro">
-    <a  href="index-temp.html"><img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;"></a>
+    <a  href="index.html"><img src="logo.png" width="400" height="100" style="filter: contrast(200%); padding-top: 30px;"></a>
   </div>
 
 <body onload="loadBasic()">
 
 
     <div id = "navBarLeft" style="float: left; width: 500px; height:700px; margin: 20px">
-      <h1><a id = "formLink" href="index-temp.html">Select Form</a></h1>
+      <h1><a id = "formLink" href="index.html">Select Form</a></h1>
       <h1><a id = "uploadLink" class="active" onclick="uploadFile()" >Upload STL</a></h1>
       <h1><a id = "downloadLink" onclick = "screenShot()">Download PDF</a></h1>
       
