start page second draft

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67e5d0119e.js" crossorigin="anonymous"></script>
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,36 +22,110 @@
                 <ul id="menu">
                     <li><a href="#">How To</a></li>
                     <li><a href="./resource.html">Resources</a></li>
-                    <li><a href="./about.html" >About</a></li>
-                    <li><a href="#" >Contact</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    
                 </ul>
+                
             </nav>
 
             <!-- upload button/div-->
             <div class="upload-container">
-                <button class="upload-button" type="button">Upload</button>
+                <button class="upload-button" type="button">UPLOAD</button>
             </div>
 
         </div>
     </div>
 
+
     <div id="workflow">
+
         <div class="work-item">
-            <h2 class="work-item-title">Upload</h2>
-            <img class="work-item-pic" src="..."/>
-            <p class="work-item-text">Description xxxxx</p>
+            <h2 class="work-item-title">UPLOAD</h2>
+            <img class="work-item-pic" src="./pictures/start page/upload.png" />
+            <p class="work-item-text">Upload any .STL file.</p>
         </div>
         <div class="work-item">
-            <h2 class="work-item-title">Modify</h2>
-            <img class="work-item-pic" src="..."/>
-            <p class="work-item-text">Description xxxxx</p>
+            <h2 class="work-item-title">MODIFY</h2>
+            <img class="work-item-pic" src="./pictures/start page/modify.png" />
+            <p class="work-item-text">Modify your selections to best fit the shape of your file.</p>
         </div>
         <div class="work-item">
-            <h2 class="work-item-title">Download</h2>
-            <img class="work-item-pic" src="..."/>
-            <p class="work-item-text">Description xxxxx</p>
+            <h2 class="work-item-title">DOWNLOAD</h2>
+            <img class="work-item-pic" src="./pictures/start page/download.png" />
+            <p class="work-item-text">Download your .PDF to print.</p>
         </div>
     </div>
+
+
+    <div class="gallery">
+        <div class="container">
+            <h1 class="title">Gallery</h1>
+            <ul class="image-gallery">
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                </li>
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                </li>
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                </li>
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                </li>
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                </li>
+                <li class="image-gallery-item">
+                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="about">
+        <div class="container">
+            <h1 class="title">About</h1>
+            <h2 class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h2>
+            <a href="about.html"><button class="read-more-button">Read More</button></a>
+        </div>
+    </div>
+
+    <div id="footer">
+        <div class="container">
+
+            <div class="footer-nav-container">
+                <ul class="footer-nav" style="text-align:center;">
+                    <li><a href="#">How To</a></li>
+                    <h1>|</h1>
+                    <li><a href="./resource.html">Resources</a></li>
+                    <h1>|</h1>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <h1>|</h1>
+                    <li><a href="./about.html">About</a></li>
+                </ul>
+
+                <ul class="footer-nav" style="text-align:center;">
+                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <h1>|</h1>
+                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+
 
     <script src="index.js"></script>
 </body>
