start page second draft

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -38,25 +38,27 @@
         </div>
     </div>
 
-
+    <div class="container" style="background: #7072EC;">
+        <h2 class="workflow-instructions">Instructions</h2>
     <div id="workflow">
-
         <div class="work-item">
-            <h2 class="work-item-title">UPLOAD</h2>
+            <h2 class="work-item-title">Upload</h2>
             <img class="work-item-pic" src="./pictures/start page/upload.png" />
             <p class="work-item-text">Upload any .STL file.</p>
         </div>
         <div class="work-item">
-            <h2 class="work-item-title">MODIFY</h2>
+            <h2 class="work-item-title">Modify</h2>
             <img class="work-item-pic" src="./pictures/start page/modify.png" />
             <p class="work-item-text">Modify your selections to best fit the shape of your file.</p>
         </div>
         <div class="work-item">
-            <h2 class="work-item-title">DOWNLOAD</h2>
+            <h2 class="work-item-title">Download</h2>
             <img class="work-item-pic" src="./pictures/start page/download.png" />
             <p class="work-item-text">Download your .PDF to print.</p>
         </div>
     </div>
+    </div>
+    
 
 
     <div class="gallery">
