--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -21,7 +21,13 @@
                 <!--  menu items -->
                 <ul id="menu">
                     <li><a href="#">How To</a></li>
-                    <li><a href="./resource.html">Resources</a></li>
+                    <li class="menu-item dropdown">
+                        <a href="./resource.html" class="dropbtn">Resources</a>
+                        <div class="dropdown-content">
+                            <a href="#">TinkerCAD</a>
+                            <a href="#">Lesson Plans</a>
+                        </div>
+                    </li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="#">Contact</a></li>
