Upload Popup Start
This is the foundation of the Upload Popup. It still needs the rest of it [Backend, the rest of the frontend (HTML and CSS)].

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -21,6 +21,14 @@
         </div>
     </div>
 
+    <!--Upload Popup-->
+    <div id="uploadPopup" class="popup">
+        <div class="popup-content">
+            <span id="closeUploadPopupBtn" class="close-btn">&times;</span>
+            <p>This is a upload popup!</p>
+        </div>
+    </div>
+
     <!--Popup overlay-->
     <div id="overlay" class="overlay"></div>       
     
@@ -50,7 +58,7 @@
 
             <!-- upload button/div-->
             <div class="upload-container">
-                <button class="upload-button" type="button">UPLOAD</button>
+                <button class="upload-button" id = "openUploadPopupBtn" type="button">UPLOAD</button>
             </div>
 
         </div>
