--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -157,6 +157,7 @@
         </div>
     </div>
 
+    <!--TODO: Make Footer?-->
     <div id="footer">
         <div class="container">
 
@@ -189,5 +190,5 @@
 
     <script src="index.js"></script>
 </body>
-
+    <input type="file" id="fileInput" name="fileInput" onchange="stlLoad(this)" placeholder="Upload" accept="*.*"> 
 </html>
