finish connecting the pages together.

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -25,7 +25,7 @@
     <div id="uploadPopup" class="popup">
         <div class="popup-content">
             <!-- upload button/div-->
-            <div class="upload-container">
+            <div id="open-directory-container" class="background-container">
                 <button id="openDirectoryBtn"  class="upload-button" type="button">UPLOAD</button>
             </div>
             <div>
@@ -40,7 +40,10 @@
         <div class="popup-content">
             <!--TOOD Fix Close-->
             <span id="closePreviewPopupBtn" class="close-button">&times;</span>
-            <p>Preview Popup</p>
+            <!-- upload button/div-->
+            <div id="upload-preview-container" class="background-container">
+                <p>Preview Popup</p>
+            </div>
             <div>
                 <button id="backPreviewPopupBtn" class="back-button" type="button">BACK</button>
                 <button id="nextPreviewPopupBtn"  class="next-button" type="button">NEXT</button>
@@ -89,7 +92,7 @@
             </nav>
 
             <!-- upload button/div-->
-            <div class="upload-container">
+            <div id="upload-container"class="background-container">
                 <button class="upload-button" id = "openUploadPopupBtn" type="button">UPLOAD</button>
             </div>
 
