about draft 1 + logo added

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -72,7 +72,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a class="name" href="./index.html">Printer Form</a>
+                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
                     <li><a href="#">How To</a></li>
@@ -85,10 +85,7 @@
                     </li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    
-                </ul>
-                
+                </ul> 
             </nav>
 
             <!-- upload button/div-->
