--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -37,8 +37,8 @@
     <div id="mission">
         <div class="container">
             <h1 class="title">Our Mission</h1>
-            <div id="mission-container" class="text-container">
-                <p>We aim to create a more accessible tool that introduces basic 3D modeling and
+            <div class="text-container">
+                <p class="mission-text">We aim to create a more accessible tool that introduces basic 3D modeling and
                     3D printing into educational and creative spaces. It does not replace traditional
                     plastic 3D printing but it hopefully provides an opportunity to create quick mock-ups,
                     test, and iterate ideas. Using common materials like an inkjet or laser printer, 8.5”x11”
