--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -18,7 +18,7 @@
                 <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
-                    <li><a href="#">How To</a></li>
+                    <li><a href="how-to.html">How To</a></li>
                     <li class="menu-item dropdown">
                         <a href="./resource.html" class="dropbtn">Resources</a>
                         <div class="dropdown-content">
