--- a/Web Page1.0/how-to.html
+++ b/Web Page1.0/how-to.html
@@ -34,6 +34,17 @@
         </div>
     </div>
 
+    <!--video walkthrough-->
+    <div id="video">
+        <div class="container" style="margin:30px 10%; margin-bottom: 0; background: #F5F5F5;">
+            <h1 class="video-title">Video Walkthrough</h1>
+            <div class="video-container">
+                <iframe width="700" height="400" style="align:center;"src="https://www.youtube.com/embed/Cq_6qBnjZTA?si=WNezuhD8cY2PKfH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+
     <!-- instructions container -->
     <div id="instructions">
         <div class="container" style="margin:30px 10%; margin-bottom: 0; background: #F1F1FD;">
@@ -101,8 +112,8 @@
         </div>
     </div>
 
-     <!-- additional examples container -->
-     <div id="additional-examples">
+    <!-- additional examples container -->
+    <div id="additional-examples">
         <div class="container" style="margin:30px 10%; margin-top: 0; background: #F1F1FD;">
             <h1 class="title">Additional Examples</h1>
             <ul class="image-gallery">
@@ -119,11 +130,11 @@
                     <img src="./pictures/start page/curved_sample 1.png" alt="" />
                 </li>
             </ul>
-            <p class="additional-examples-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+            <p class="additional-examples-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
