--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -76,7 +76,7 @@
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
-                    <li><a href="how-to.html">How To</a></li>
+                    <li><a href="./how-to.html">How To</a></li>
                     <li class="menu-item dropdown">
                         <a href="./resource.html" class="dropbtn">Resources</a>
                         <div class="dropdown-content">
@@ -163,7 +163,7 @@
 
             <div class="footer-nav-container">
                 <ul class="footer-nav" style="text-align:center;">
-                    <li><a href="#">How To</a></li>
+                    <li><a href="./how-to.html">How To</a></li>
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
