--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--upload-->
     <script src="https://kit.fontawesome.com/67e5d0119e.js" crossorigin="anonymous"></script>
+
     <!-- Include from the CDN -->
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
+
+    <!--jsPDF-->
+    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -206,7 +212,7 @@
 
 
 
-    <script src="stl_viewer.min.js" ></script>
+    <script src="stl_viewer.min.js"></script>
     <script src="index.js"></script>
 </body>
     <input type="file" id="fileInput" name="fileInput" onchange="stlLoad(this)" placeholder="Upload" accept="*.*"> 
