Revert "Preview popup"

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -4,15 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--upload-->
     <script src="https://kit.fontawesome.com/67e5d0119e.js" crossorigin="anonymous"></script>
-
-    <!-- Include from the CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
-
-    <!--jsPDF-->
-    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
-
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -42,6 +34,94 @@
             </div>
         </div>
     </div>
+
+    <!--Preview Popup-->
+    <div id="previewPopup" class="popup">
+        <div class="popup-content">
+            <!--TOOD Fix Close-->
+            <span id="closePreviewPopupBtn" class="close-button">&times;</span>
+            <!-- upload button/div-->
+            <div id="upload-preview-container" class="background-container">
+                <p>Preview Popup</p>
+            </div>
+            <div class="bottom-buttons">
+                <button id="backPreviewPopupBtn" class="back-button" type="button">BACK</button>
+                <button id="nextPreviewPopupBtn" class="next-button" type="button">NEXT</button>
+            </div>
+        </div>
+    </div>
+
+    <!--Form Selection Popup-->
+    <div id="formSelectionPopup" class="popup">
+        <div class="popup-content" id="fs-popup-container">
+            <!--TOOD Fix Close-->
+            <span id="closeFormSelectionPopupBtn" class="close-button">&times;</span>
+            <h2 id="fs-title">Form Selection</h2>
+            <div id="fs-content-container">
+                <div id="fs-curvedvolume" class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Curved Volume</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div id="fs-foursidedcube" class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Four-Sided Cube</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div id="fs-3" class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div class="fs-item">
+                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Form Name</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-buttons">
+                <button id="backFormSelectionPopupBtn" class="back-button" type="button">BACK</button>
+                <button id="nextFormSelectionPopupBtn" class="next-button" type="button">NEXT</button>
+            </div>
+        </div>
+    </div>
+
     <!--Popup overlay-->
     <div id="overlay" class="overlay"></div>
 
@@ -66,6 +146,7 @@
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
+
             <!-- upload button/div-->
             <div id="upload-container" class="background-container">
                 <button class="upload-button" id="openUploadPopupBtn" type="button">UPLOAD</button>
@@ -164,7 +245,7 @@
 
 
 
-    <script src="./viewstl/stl_viewer.min.js"></script>
+
     <script src="index.js"></script>
 </body>
 <input type="file" id="fileInput" name="fileInput" onchange="stlLoad(this)" placeholder="Upload" accept="*.*">
