gallery first draft

--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -26,7 +26,7 @@
                             <a href="#">Lesson Plans</a>
                         </div>
                     </li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
@@ -140,7 +140,7 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
                     <h1>|</h1>
                     <li><a href="./about.html">About</a></li>
                 </ul>
