--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -211,7 +211,7 @@
                 common materials like an inkjet or laser printer and 8.5” x 11” 
                 paper to produce high speed, low resolution 3D objects.
             </p>
-            <a href="about.html"><button class="read-more-button">Read More</button></a>
+            <a href="./about.html"><button class="read-more-button">Read More</button></a>
         </div>
     </div>
 
