--- a/Web Page1.0/gallery.html
+++ b/Web Page1.0/gallery.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - PrinterForm</title>
+    <link rel="stylesheet" href="gallery-styles.css">
 </head>
+
 <body>
-    
+    <div id="header">
+        <div class="container">
+            <!--  navigation bar -->
+            <nav class="nav-bar">
+                <!--  logo/name -->
+                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
+                <!--  menu items -->
+                <ul id="menu">
+                    <li><a href="./how-to.html">How To</a></li>
+                    <li class="menu-item dropdown">
+                        <a href="./resource.html" class="dropbtn">Resources</a>
+                        <div class="dropdown-content">
+                            <a href="#">TinkerCAD</a>
+                            <a href="#">Lesson Plans</a>
+                        </div>
+                    </li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li><a href="./about.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <!--hsare your work box-->
+    <div id="share">
+        <div class="container">
+            <h1 class="title">Community Gallery</h1>
+            <div class="text-container">
+                <p class="share-text">Share your work!
+                    Upload an image of your printed and folded model to share it with the PrinterForm community. Check back every week for new featured work created with PrinterForm. 
+                </p>
+                <a class="button-container" href="https://sentry.io/answers/">
+                    <button class="upload-button">UPLOAD</button>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+     <!-- footer -->
+    <div id="footer">
+        <div class="container">
+
+            <div class="footer-nav-container">
+                <ul class="footer-nav" style="text-align:center;">
+                    <li><a href="./how-to.html">How To</a></li>
+                    <h1>|</h1>
+                    <li><a href="./resource.html">Resources</a></li>
+                    <h1>|</h1>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <h1>|</h1>
+                    <li><a href="./about.html">About</a></li>
+                </ul>
+
+                <ul class="footer-nav" style="text-align:center;">
+                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <h1>|</h1>
+                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+ 
 </body>
 </html>
