gallery first draft

--- a/Web Page1.0/gallery.html
+++ b/Web Page1.0/gallery.html
@@ -39,7 +39,7 @@
                 <p class="share-text">Share your work!
                     Upload an image of your printed and folded model to share it with the PrinterForm community. Check back every week for new featured work created with PrinterForm. 
                 </p>
-                <a class="button-container" href="https://sentry.io/answers/">
+                <a class="button-container" href="#">
                     <button class="upload-button">UPLOAD</button>
                 </a>
             </div>
