--- a/Web Page1.0/gallery.html
+++ b/Web Page1.0/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,8 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
+                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                        alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
                     <li><a href="./how-to.html">How To</a></li>
@@ -31,13 +33,14 @@
         </div>
     </div>
 
-    <!--hsare your work box-->
+    <!--share your work box-->
     <div id="share">
-        <div class="container">
+        <div class="container" style="padding-bottom: 0;">
             <h1 class="title">Community Gallery</h1>
             <div class="text-container">
                 <p class="share-text">Share your work!
-                    Upload an image of your printed and folded model to share it with the PrinterForm community. Check back every week for new featured work created with PrinterForm. 
+                    Upload an image of your printed and folded model to share it with the PrinterForm community. Check
+                    back every week for new featured work created with PrinterForm.
                 </p>
                 <a class="button-container" href="#">
                     <button class="upload-button">UPLOAD</button>
@@ -46,8 +49,77 @@
         </div>
     </div>
 
+    <!-- featured container -->
+    <div class="container" style="background: #7072EC;">
+        <h1 class="title" style="color: #fff;">Featured This Week</h1>
+        <div id="featured">
+            <div class="featured-item">
+                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <h2 class="featured-title">Project Title</h2>
+                <p class="featured-text">John D. - School - Grade X</p>
+                <p class="featured-text">Rhode Island</p>
+            </div>
+            <div class="featured-item">
+                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <h2 class="featured-title">Project Title</h2>
+                <p class="featured-text">John D. - School - Grade X</p>
+                <p class="featured-text">Rhode Island</p>
+            </div>
+            <div class="featured-item">
+                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <h2 class="featured-title">Project Title</h2>
+                <p class="featured-text">John D. - School - Grade X</p>
+                <p class="featured-text">Rhode Island</p>
+            </div>
+        </div>
+    </div>
 
-     <!-- footer -->
+    <!-- gallery container -->
+    <div id="additional-examples">
+        <div class="container"
+            style="margin:30px 10%; padding-left: 0; padding-right: 0;margin-top: 0; background: #F5F5F5;">
+            <ul class="image-gallery">
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt=""/>
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+                <li class="image-gallery-item">
+                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+
+
+
+
+    <!-- footer -->
     <div id="footer">
         <div class="container">
 
@@ -71,6 +143,39 @@
 
         </div>
     </div>
- 
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+        <div id="caption"></div>
+    </div>
+
+    <script>
+        // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the image and insert it inside the modal - use its "alt" text as a caption
+        var img = document.getElementsByClassName("myImg");
+        var modalImg = document.getElementById("img01");
+        var captionText = document.getElementById("caption");
+        for (var i = 0; i < img.length; i++) {
+            img[i].onclick = function () {
+                modal.style.display = "block";
+                modalImg.src = this.src;
+                captionText.innerHTML = this.alt;
+            }
+        }
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+    </script>
+
 </body>
+
 </html>
