--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -225,7 +225,7 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
                     <h1>|</h1>
                     <li><a href="./about.html">About</a></li>
                 </ul>
